--- a/_src/html/block/header/header.html
+++ b/_src/html/block/header/header.html
@@ -1,3 +1,93 @@
 <header class="header">
-  <div class="container">header</div>
+  <div class="container header__container">
+    <div class="header__top">
+      <div class="header__logo-desc">
+        <a href="index.html" class="header__logo">
+          <img src="static/img/logo/logo.png" alt="Логотип">
+        </a>
+        <p class="header__desc">
+          <b>Профессиональный монтаж<br>
+            дымоходов</b> любой сложности на<br>
+          территории Киева и Киевской обл.
+        </p>
+      </div>
+
+      <div class="header__map-wrap-btn">
+        <div class="header__map-desc">
+          <a href="#" class="header__map-img">
+            <img src="static/img/map/map.png" alt="">
+          </a>
+          <p class="header__address">
+            <b class="heavy">Украина, Киев,</b><br>
+            Васильковская 30<br>
+            <a class="header__address-link" data-fancybox="" data-type="iframe"
+              data-src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2543.536483374805!2d30.489490215685848!3d50.39383867946752!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4c8c475044599%3A0x865c5c7909939ce2!2z0YPQuy4g0JLQsNGB0LjQu9GM0LrQvtCy0YHQutCw0Y8sINCa0LjQtdCyLCDQo9C60YDQsNC40L3QsCwgMDIwMDA!5e0!3m2!1sru!2sru!4v1619856118652!5m2!1sru!2sru"
+              href="javascript:;">
+              Посмотреть на карте
+            </a>
+            <!-- <a class="header__address-link fancy-class"
+              href="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10174.145864712596!2d30.491679000000005!3d50.39383900000001!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4c8c475044599%3A0x865c5c7909939ce2!2z0YPQuy4g0JLQsNGB0LjQu9GM0LrQvtCy0YHQutCw0Y8sINCa0LjQtdCyLCDQo9C60YDQsNC40L3QsCwgMDIwMDA!5e0!3m2!1sru!2sru!4v1624089744597!5m2!1sru!2sru"
+              data-fancybox="iframe">Посмотреть на карте</a> -->
+          </p>
+        </div>
+        <div class="header__lang">
+          <p class="header__lang-text">Выбор языка</p>
+          <p class="header__lang-wrap-link">
+            <a href="#" class="header__lang-link header__lang-link--current">RU</a>
+            <a href="#" class="header__lang-link">UA</a>
+          </p>
+        </div>
+
+        <a data-fancybox href="#modal" class="header__btn btn btn-reset">Консультация инженера</a>
+      </div>
+
+      <div class="header__contacts">
+        <a href="tel:+38 067 242-58-78" class="header__phone"><b class="heavy">+38 067 242-58-78</b></a>
+
+        <div class="header__social social">
+          <a href="#" class="header__social-link social__link" aria-label="viber-link">
+          </a>
+          <a href="#" class="header__social-link social__link" aria-label="telegram-link">
+          </a>
+          <a href="#" class="header__social-link social__link" aria-label="whatsapp-link"></a>
+        </div>
+      </div>
+
+      <button class="header__burger header__burger--opened" arial-label="Открыть меню" type="button"></button>
+    </div>
+
+    <nav class="header__nav nav">
+      <ul class="nav__list list-reset">
+        <li class="nav__item">
+          <a href="#" class="nav__item-link">Калькулятор</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__item-link">Услуги</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__item-link">Наши новости</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__item-link">Отзывы</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__item-link">Консультация</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__item-link">Преимущество</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__item-link">Производство</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__item-link">Вопрос-ответ</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__item-link">Контакты</a>
+        </li>
+      </ul>
+      <button class="nav__icon-close" arial-label="Закрыть меню" type="button"></button>
+    </nav>
+  </div>
+  <!--/container-->
 </header>
