--- a/_src/html/block/head.html
+++ b/_src/html/block/head.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Монтаж дымоходов</title>
   <meta name="description" content="description">
   <link rel="icon" href="./static/img/favicon/favicon.png">
 
@@ -15,7 +15,10 @@
   <!-- <link rel="preload" href="./static/css/libs.min.css" as="style">
   <link rel="preload" href="./static/css/main.min.css" as="style"> -->
 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
   <link rel="stylesheet" href="./static/css/libs.min.css">
   <link rel="stylesheet" href="./static/css/main.min.css">
 </head>
+
 <body>
