--- a/_src/html/block/scripts.html
+++ b/_src/html/block/scripts.html
@@ -1,4 +1,8 @@
-  <script src="./static/js/libs.min.js"></script>
-  <script src="./static/js/main.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+<script src="./static/js/libs.min.js"></script>
+<script src="./static/js/main.min.js"></script>
 </body>
+
 </html>
