--- a/_src/html/index.html
+++ b/_src/html/index.html
@@ -54,7 +54,7 @@
           </h2>
 
           <div class="primary__sertificate-slider slider-sertificate">
-            <div class="slider-sertificate__container swiper-container">
+            <div class="slider-sertificate__container swiper">
               <div class="slider-sertificate__wrapper swiper-wrapper">
 
                 <div class="slider-sertificate__slide swiper-slide">
